# alzheimer-detection-eeg

./: .gitignore  README.md  ad-detection-ResNet.ipynb  pyproject.toml
results_before_validity_check/: paretial.rtf
src/ad_detection_resnet/: __init__.py  __main__.py  config.py  data_export.py  dataset.py  model.py  pipeline.py  training.py
