[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-detection-resnet"
version = "0.2.0"
description = "Package version of the Alzheimer EEG notebook workflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "keras",
    "matplotlib",
    "numpy",
    "pillow",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tensorflow",
]

[project.scripts]
ad-detection-resnet = "ad_detection_resnet.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
